# strace-copy

./: Cargo.toml  README.md
src/: main.rs
