[package]
name = "strace-copy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[lints.rust]
unused_imports = "deny"
unused_variables = "deny"
dead_code = "deny"
non_snake_case = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
missing_panics_doc = "allow"
match_same_arms = "allow"
cast_possible_truncation = "allow"
missing_errors_doc = "allow"
cargo_common_metadata = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
inline_always = "allow"
cast_sign_loss = "allow"
multiple_crate_versions = "allow"
significant_drop_tightening = "allow"
while_float = "allow"
suboptimal_flops = "allow"
